2001-06-21  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/misc.c (lp_parse): Changed two arguments' type from int to
 	the more proper TBOOLEAN. Restructured handling of point symbol
 	modifiers to give more helpful error message than just 'undefined
 	variable: pointtype'.

	* src/misc.h (lp_parse): Updated prototype.

	* src/plot2d.c (eval_plots): Bugfix from removing magic
 	numbers. Was testing whether the plot contained lines, not points,
 	as it called lp_parse().
	
2001-06-22  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/makefile.mgw: remove backslahes from "\/".

2001-06-21  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/axis.c (gprintf): Added code to make use of new features of
 	mant_exp() introduced Jan 21st this year, for %l and %L formats.
  	Helps to avoid problems where people use %L even though the
 	logbase is 10.
	(setup_tics): Corrected determination of 'fixmin' and 'fixmax'.
	(axis_checked_extend_empty_range): Removed a few more magic
 	numbers.
	(load_range): Dito. Also changed return type and argument from
 	TBOOLEAN to new type t_autoscale.

	* src/axis.h (load_range): Updated prototype.
	
2001-06-20  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/x11.trm (X11_waitforinput): Call getc() instead of read(),
 	to avoid problems with buffering of stdio streams.

	* src/command.c (fgets_ipc): Fix EOF checking error. Replaced
 	pointer arithmetics by array indexing. Made this function active
 	regardless of USE_MOUSE status, moving the #ifdef inside it.
	(read_line): Simplification: just call fgets_ipc, no matter what
 	USE_MOUSE is. Let that function decide whether mouse support stuff
 	is needed.

	* src/gadgets.c (clip_point): Cast coordinates to int in
 	comparison to the boundaries, since those are signed too, and they
 	might actually be negative, sometimes. Fixes wrong clipping for
 	negative 'set offset' parameters.

	* src/gp_types.h: Parenthesize bitmasks in plot style enum values,