@@ -1,3 +1,8 @@
+2001-06-25  Petr Mikulik  <mikulik@physics.muni.cz>
+
+	* src/win/wtext.c: Hotkeys Ctrl-Insert and Shift-Insert for
+	clipboard access.
+
 2001-06-21  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
 	* src/misc.c (lp_parse): Changed two arguments' type from int to
@@ -13,7 +18,7 @@
 	
 2001-06-22  Petr Mikulik  <mikulik@physics.muni.cz>
 
-	* config/makefile.mgw: remove backslahes from "\/".
+	* config/makefile.mgw: Remove backslahes from "\/".
 
 2001-06-21  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
